2000-06-28  Sven Wischnowsky  <wischnow@zsh.org>

	* 12105: Completion/Core/_main_complete: reset _comp_mesg (saying
 	whether there were messages) appropriately
	
	* Jan Fedak: 12097: Completion/Use/_ssh: use _ports when
	completing remote ports

	* Andrej: 12094: Doc/Zsh/compsys.yo: a bit of cleanup

	* 12099: Completion/Core/_oldlist: make _oldlist not use the dummy
 	match added for the warning
	
	* 12093: Src/Zle/compcore.c, Src/Zle/complist.c, Src/Zle/compresult.c:
 	make a-a-i-n-h in menu selection work with one match; better undo
 	behaviour for menu selection
	
2000-06-27  Bart Schaefer  <schaefer@brasslantern.com>

	* 12086: Doc/Zsh/compsys.yo: Move _use_lo doc into alphabetical
	order; separate _files and _path_files for same reason.

2000-06-27  Sven Wischnowsky  <wischnow@zsh.org>

	* users/3219: Completion/Core/_main_complete, Doc/Zsh/compsys.yo:
	menu style accepts yes=x to start menu completion if there are at
	least x matches
	
	* Andrej: 12084: Src/Modules/zpty.c: don't close slave if not yet open

	* 12082: Doc/Zsh/compsys.yo: document _use_lo
	
2000-06-27  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* Andrej: 12081: Src/Modules/zpty.c: compiles under Cygwin, but
	still glitches.

2000-06-26  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* unposted: Src/builtin.c, Src/utils.c: move read_poll to utils.c
	as suggested by Bart.

2000-06-26  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12076: Completion/Core/compinstall: overwrote file if no
	style information; overwrote symbolic link instead of following;
	didn't check file name for sanity.

2000-06-26  Bart Schaefer  <schaefer@zsh.org>

	* 12074: Doc/Zsh/builtins.yo, Doc/Zsh/manual.yo: Remove one more
	reference to compfmt; add missing menu items to node listing.

2000-06-26  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12073: Src/builtin.c, Src/utils.c, Doc/Zsh/builtins.yo: first
	pass at `read -t' which tests for availability of input before
	inputting.
