@@ -1,5 +1,8 @@
 2000-06-28  Sven Wischnowsky  <wischnow@zsh.org>
 
+	* 12107: Completion/Core/_setup, Src/Zle/complist.c: fix for
+ 	list-colors handling
+	
 	* 12105: Completion/Core/_main_complete: reset _comp_mesg (saying
  	whether there were messages) appropriately
 	
